@@ -19,8 +19,6 @@
 // You should have received a copy of the GNU General Public License
 // along with Rcpp.  If not, see <http://www.gnu.org/licenses/>.
 
-#include <RcppCommon.h>
-#include <Rcpp/RObject.h>
 #include <Rcpp/IntegerVector.h>
 
 namespace Rcpp{
