@@ -20,8 +20,6 @@
 // along with Rcpp.  If not, see <http://www.gnu.org/licenses/>.
 
 #include <Rcpp/Language.h>
-#include <RcppCommon.h>
-#include <Rcpp/wrap.h>
 
 namespace Rcpp {
 	
