@@ -34,7 +34,6 @@
 #include <Rcpp/RawVector.h>
 #include <Rcpp/NumericVector.h>
 #include <Rcpp/LogicalVector.h>
-#include <Rcpp/GenericVector.h>
 #include <Rcpp/CharacterVector.h>
 
 namespace Rcpp{ 
