@@ -4,8 +4,12 @@
 
 	* src/Rcpp/Environment.h: make sure what() is const. (suncc finding)
 
-	* src/RcppCommon.h: pre declare classes, as an ettempt to 
+	* src/RcppCommon.h: pre declare classes, as an attempt to 
 	deal with the suncc warning "RObject may not have a type qualifier."
+
+	* src/Rcpp/*.h: make sure RcppCommon.h is the first included header
+
+	* src/*cpp: make sure foo.cpp only include Rcpp/foo.h
 
 2010-01-21  Dirk Eddelbuettel  <edd@debian.org>
 
